fixed alignment issues

--- a/static/css/userinterface.css
+++ b/static/css/userinterface.css
@@ -29,12 +29,13 @@ body{
   }
 
 
+
 .nav-item {
   background-color: #FF9F48;
   height: 35px;
   float: right;
   margin-right: 5px;
-  margin-top: 5px;
+ /margin-top: 2.4%;
   border-style: none;
 }
 
@@ -223,7 +224,7 @@ img {
 }
 
 .txtExpr{
-  width:96%;
+  width:96.5%;
   padding: 1% 1% 1% 1%;
   margin:0.5%;
   height:96%;
@@ -294,6 +295,7 @@ img {
   float:left;
   margin-bottom: 5px;
   min-height: 1px;
+  margin-left: 0.51%;
 
 }
 
